--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "connectionString": "Server=tcp:renatochiaribalta7194.database.windows.net,1433;Initial Catalog=renatochiaribalta7194;Persist Security Info=False;User ID=renato;Password=Abc123!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "connectionString": "server=localhost,1433;database=shop;User ID=SA;Password=Abc123!@#"
   }
 }
